# ipywebcam

./: .coveragerc  .eslintrc.js  .gitignore  LICENSE.txt  MANIFEST.in  README.md  babel.config.js  codecov.yml  install.json  ipywebcam.json  jest.config.js  package-lock.json  package.json  pyproject.toml  pytest.ini  tsconfig.json  webpack.config.js
css/: video.css
docs/: Makefile  environment.yml  make.bat
docs/source/: conf.py  develop-install.rst  index.rst  installing.rst
examples/: introduction.ipynb
ipywebcam/: __init__.py  _frontend.py  _version.py  common.py  easyqueue.py  recorder.py  test.py  webcam.py
ipywebcam/nbextension/: extension.js
ipywebcam/owt/: channel.py  common.py  publication.py  signaling.py  subscription.py
ipywebcam/tests/: conftest.py  test_nbextension_path.py  test_webcam.py
src/: charts.ts  common.ts  extension.ts  index.ts  owt.d.ts  owt.js  plugin.ts  range.ts  recorder.ts  types.ts  utils.ts  version.ts  video.ts  webcam.ts  webrtc.ts  widget.ts  widgets.ts
src/__tests__/: index.spec.ts
