[build-system]
requires = [
    "hatchling>=1.3.1",
    "jupyterlab==3.*",
]
build-backend = "hatchling.build"

[project]
name = "ipywebcam"
description = "A Custom Jupyter Widget Library for Web Camera using WebRTC"
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = ">=3.7,<=3.11"
authors = [
    { name = "Xiaojing Chen", email = "vipcxj@126.com" },
]
keywords = [
    "IPython",
    "Jupyter",
    "Widgets",
    "Camera",
]
classifiers = [
    "Framework :: Jupyter",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "ipywidgets>=7.0.0",
    "aiortc",
]
version = "0.1.12"

[project.optional-dependencies]
docs = [
    "jupyter_sphinx",
    "nbsphinx",
    "nbsphinx-link",
    "pypandoc",
    "pytest_check_links",
    "recommonmark",
    "sphinx>=1.5",
    "sphinx_rtd_theme",
]
examples = []
test = [
    "nbval",
    "pytest-cov",
    "pytest>=6.0",
]

[project.urls]
Homepage = "https://github.com/vipcxj/ipywebcam"

[tool.hatch.build]
artifacts = [
    "ipywebcam/nbextension/index.*",
    "ipywebcam/labextension/*.tgz",
    "ipywebcam/labextension",
]

[tool.hatch.build.targets.wheel.shared-data]
"ipywebcam/nbextension" = "share/jupyter/nbextensions/ipywebcam"
"ipywebcam/labextension" = "share/jupyter/labextensions/ipywebcam"
"./install.json" = "share/jupyter/labextensions/ipywebcam/install.json"
"./ipywebcam.json" = "etc/jupyter/nbconfig/notebook.d/ipywebcam.json"

[tool.hatch.build.targets.sdist]
exclude = [
    ".github",
]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "ipywebcam/nbextension/index.js",
    "ipywebcam/labextension/package.json",
]
skip-if-exists = [
    "ipywebcam/nbextension/index.js",
    "ipywebcam/labextension/package.json",
]
dependencies = [
    "hatch-jupyter-builder>=0.5.0",
]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
path = "."
build_cmd = "build:prod"

[tool.tbump]
field = [
    { name = "channel", default = "" },
    { name = "release", default = "" },
]
file = [
    { src = "pyproject.toml", version_template = "version = \"{major}.{minor}.{patch}{channel}{release}\"" },
    { src = "ipywebcam/_version.py", version_template = "__version__ = \"{major}.{minor}.{patch}{channel}\"" },
    { src = "package.json", version_template = "\"version\": \"{major}.{minor}.{patch}\"" },
]

[tool.tbump.version]
current = "0.1.12"
regex = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)((?P<channel>a|b|rc|.dev)(?P<release>\\d+))?"

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"
